# serializer version: 1
# name: test_humidifier_state_snapshot[a1][humidifier.dehumidifier-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <HumidifierEntityCapabilityAttribute.AVAILABLE_MODES: 'available_modes'>: list([
        'manual',
        'continuous',
        'auto',
        'clothes_dry',
        'shoes_dry',
      ]),
      <HumidifierEntityCapabilityAttribute.MAX_HUMIDITY: 'max_humidity'>: 85,
      <HumidifierEntityCapabilityAttribute.MIN_HUMIDITY: 'min_humidity'>: 35,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'humidifier',
    'entity_category': None,
    'entity_id': 'humidifier.dehumidifier',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <HumidifierDeviceClass.DEHUMIDIFIER: 'dehumidifier'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <HumidifierEntityFeature: 1>,
    'translation_key': None,
    'unique_id': '12345678_humidifier',
    'unit_of_measurement': None,
  })
# ---
# name: test_humidifier_state_snapshot[a1][humidifier.dehumidifier-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <HumidifierEntityCapabilityAttribute.AVAILABLE_MODES: 'available_modes'>: list([
        'manual',
        'continuous',
        'auto',
        'clothes_dry',
        'shoes_dry',
      ]),
      <HumidifierEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 60.0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'dehumidifier',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Dehumidifier',
      <HumidifierEntityStateAttribute.HUMIDITY: 'humidity'>: 55.0,
      <HumidifierEntityCapabilityAttribute.MAX_HUMIDITY: 'max_humidity'>: 85,
      <HumidifierEntityCapabilityAttribute.MIN_HUMIDITY: 'min_humidity'>: 35,
      <HumidifierEntityStateAttribute.MODE: 'mode'>: 'auto',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <HumidifierEntityFeature: 1>,
    }),
    'context': <ANY>,
    'entity_id': 'humidifier.dehumidifier',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_humidifier_state_snapshot[fd][humidifier.humidifier-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <HumidifierEntityCapabilityAttribute.AVAILABLE_MODES: 'available_modes'>: list([
        'manual',
        'auto',
        'continuous',
        'living_room',
        'bed_room',
        'kitchen',
        'sleep',
      ]),
      <HumidifierEntityCapabilityAttribute.MAX_HUMIDITY: 'max_humidity'>: 85,
      <HumidifierEntityCapabilityAttribute.MIN_HUMIDITY: 'min_humidity'>: 35,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'humidifier',
    'entity_category': None,
    'entity_id': 'humidifier.humidifier',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <HumidifierDeviceClass.HUMIDIFIER: 'humidifier'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <HumidifierEntityFeature: 1>,
    'translation_key': None,
    'unique_id': '12345678_humidifier',
    'unit_of_measurement': None,
  })
# ---
# name: test_humidifier_state_snapshot[fd][humidifier.humidifier-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <HumidifierEntityCapabilityAttribute.AVAILABLE_MODES: 'available_modes'>: list([
        'manual',
        'auto',
        'continuous',
        'living_room',
        'bed_room',
        'kitchen',
        'sleep',
      ]),
      <HumidifierEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 40.0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'humidifier',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Humidifier',
      <HumidifierEntityStateAttribute.HUMIDITY: 'humidity'>: 45.0,
      <HumidifierEntityCapabilityAttribute.MAX_HUMIDITY: 'max_humidity'>: 85,
      <HumidifierEntityCapabilityAttribute.MIN_HUMIDITY: 'min_humidity'>: 35,
      <HumidifierEntityStateAttribute.MODE: 'mode'>: 'continuous',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <HumidifierEntityFeature: 1>,
    }),
    'context': <ANY>,
    'entity_id': 'humidifier.humidifier',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
